[package]
name = "slidestream"
version = "0.1.0"
authors = ["Jurriaan Barkey Wolf <jjhbarkeywolf@gmail.com>"]
edition = "2021"

[lib]
name = "slidestream"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
serde_json = "1.0.64"
actix-web = { version = "4.2.1", default-features = false }
actix-files = "0.6.2"

# for openslide bindings.
libc = "0.2.87"
failure = "0.1.8"
image = "0.23.14"
num = "0.3.1"
byteorder = "1.4.2"
tokio = { version = "1.22.0", features = ["full"] }
env_logger = "0.9.3"
derive_more = "0.99.17"
log = "0.4.17"

[build-dependencies]
cc = "1.0.67"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
